feat: working sol
