# itunes-proxy-api/src/controllers/interfaces/album-interfaces.ts
@@ -1,0 +1,21 @@
+export interface AlbumItem {
+    albumName: string;
+    artistId: number;
+    artistName: string;
+    artworkUrl100: string;
+}
+
+export interface AlbumsByArtistResponse {
+    count: number;
+    items: AlbumItem[];
+    _links: {
+        self: {
+            href: string;
+        }
+    }
+}
+
+export interface AlbumsQueryParams {
+    artistName: string;
+    limit: number;
+}
